--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,8 +1,16 @@
 .burgerMenuIcon {
+    width: 25px;
 }
 
 .header {
+    display: flex;
+    justify-content: space-between;
+
 }
 
 .header h1 {
+
+
+
+
 }
